fix: dark mode flickering when refresh

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -318,11 +318,11 @@ details[open] div {
   color: var(--tertiary-color);
 }
 
-body.dark #moon {
+html.dark #moon {
   display: none;
 }
 
-body:not(.dark) #sun {
+html:not(.dark) #sun {
   display: none;
 }
 
